# hub/app/src/main/resources/META-INF/openapi.json
@@ -264,6 +264,306 @@
                 "description": "Creates a new instance of a `API`."
             }
         },
+        "/apis/{apiId}/labels": {
+            "summary": "Path used to manage the list of labels for an API.",
+            "description": "Manage the collection of labels assigned to an API.  Labels can also be managed\nusing the `/apis/{apiId}` endpoint's `PUT` operation.",
+            "get": {
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Label"
+                                    }
+                                }
+                            }
+                        },
+                        "description": "All API labels."
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                },
+                "operationId": "getApiLabels",
+                "summary": "Get API labels",
+                "description": "Gets a list of all labels for an API."
+            },
+            "parameters": [
+                {
+                    "name": "apiId",
+                    "description": "A unique identifier for an API.",
+                    "schema": {
+                        "type": "string"
+                    },
+                    "in": "path",
+                    "required": true
+                }
+            ]
+        },
+        "/apis/{apiId}/versions/{version}/labels": {
+            "summary": "Path used to manage the list of labels for an API Version.",
+            "description": "Manage the collection of labels assigned to an API Version.  Labels can also be managed\nusing the `/apis/{apiId}/versions/{version}` endpoint's `PUT` operation.",
+            "get": {
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Label"
+                                    }
+                                }
+                            }
+                        },
+                        "description": "All API Version labels."
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                },
+                "operationId": "getVersionLabels",
+                "summary": "Get API Version labels",
+                "description": "Gets a list of all labels for an API Version."
+            },
+            "parameters": [
+                {
+                    "name": "apiId",
+                    "description": "A unique identifier for an API.",
+                    "schema": {
+                        "type": "string"
+                    },
+                    "in": "path",
+                    "required": true
+                },
+                {
+                    "name": "version",
+                    "description": "A unique version.",
+                    "schema": {
+                        "type": "string"
+                    },
+                    "in": "path",
+                    "required": true
+                }
+            ]
+        },
+        "/apis/{apiId}/versions": {
+            "summary": "Path used to manage the list of versions for an API.",
+            "description": "The REST endpoint/path used to list and create zero or more versions of an API.  This path contains a `GET` and `POST` operation to perform the list and create tasks, respectively.",
+            "get": {
+                "parameters": [
+                    {
+                        "name": "version",
+                        "description": "Filter by API version.",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "in": "query"
+                    },
+                    {
+                        "name": "offset",
+                        "description": "The number of APIs to skip before starting to collect the result set.  Defaults to 0.",
+                        "schema": {
+                            "default": 0,
+                            "type": "integer"
+                        },
+                        "in": "query",
+                        "required": false
+                    },
+                    {
+                        "name": "limit",
+                        "description": "The number of APIs to return.  Defaults to 20.",
+                        "schema": {
+                            "default": 20,
+                            "type": "integer"
+                        },
+                        "in": "query",
+                        "required": false
+                    },
+                    {
+                        "name": "order",
+                        "description": "Sort order, ascending (`asc`) or descending (`desc`).",
+                        "schema": {
+                            "$ref": "#/components/schemas/SortOrder"
+                        },
+                        "in": "query"
+                    },
+                    {
+                        "name": "orderby",
+                        "description": "The field to sort by.  Can be one of:\n\n* `version` (default)\n* `createdOn`\n",
+                        "schema": {
+                            "$ref": "#/components/schemas/VersionSortBy"
+                        },
+                        "in": "query"
+                    },
+                    {
+                        "name": "labels",
+                        "description": "Filter by one or more name/value property.  Separate each name/value pair using a colon.  For\nexample `properties=foo:bar` will return only versions with a custom property named `foo`\nand value `bar`.",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        },
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/VersionSearchResults"
+                                }
+                            }
+                        },
+                        "description": "Successful response - returns collection of versions."
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                },
+                "operationId": "getVersions",
+                "summary": "List All Versions",
+                "description": "Gets a list of all versions of an API."
+            },
+            "post": {
+                "requestBody": {
+                    "description": "A new `ApiVersion` to be created.",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/NewVersion"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful response."
+                    },
+                    "409": {
+                        "$ref": "#/components/responses/Conflict"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                },
+                "operationId": "createVersion",
+                "summary": "Create a version of an API",
+                "description": "Creates a new version of an API."
+            },
+            "parameters": [
+                {
+                    "name": "apiId",
+                    "description": "A unique identifier for a `API`.",
+                    "schema": {
+                        "type": "string"
+                    },
+                    "in": "path",
+                    "required": true
+                }
+            ]
+        },
+        "/apis/{apiId}/versions/{version}": {
+            "summary": "Path used to manage a single version of an API.",
+            "description": "The REST endpoint/path used to get, update, and delete single instances of an API version.  This path contains `GET`, `PUT`, and `DELETE` operations used to perform the get, update, and delete tasks, respectively.",
+            "get": {
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Version"
+                                }
+                            }
+                        },
+                        "description": "Successful response - returns a single API version."
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                },
+                "operationId": "getVersion",
+                "summary": "Get an API version",
+                "description": "Gets the details of a single version of a API."
+            },
+            "put": {
+                "requestBody": {
+                    "description": "Updated version information.",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateVersion"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "202": {
+                        "description": "Successful response."
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                },
+                "operationId": "updateVersion",
+                "summary": "Update an API version",
+                "description": "Updates an existing API version."
+            },
+            "delete": {
+                "responses": {
+                    "204": {
+                        "description": "Successful response."
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                },
+                "operationId": "deleteVersion",
+                "summary": "Delete a Version",
+                "description": "Deletes an existing API version."
+            },
+            "parameters": [
+                {
+                    "name": "apiId",
+                    "description": "A unique identifier for an API.",
+                    "schema": {
+                        "type": "string"
+                    },
+                    "in": "path",
+                    "required": true
+                },
+                {
+                    "name": "version",
+                    "description": "A version of an API.",
+                    "schema": {
+                        "type": "string"
+                    },
+                    "in": "path",
+                    "required": true
+                }
+            ]
+        },
         "x-codegen-contextRoot": "/apis/hub/v0"
     },
     "components": {
@@ -600,6 +900,194 @@
                     "createdOn": "2022-01-01T12:33:00Z",
                     "name": "My First API",
                     "description": "A great first API!"
+                }
+            },
+            "Label": {
+                "title": "Root Type for Label",
+                "description": "",
+                "required": [
+                    "key"
+                ],
+                "type": "object",
+                "properties": {
+                    "value": {
+                        "type": "string"
+                    },
+                    "key": {
+                        "type": "string"
+                    }
+                },
+                "example": {
+                    "key": "label-1",
+                    "value": "value-1"
+                }
+            },
+            "Version": {
+                "title": "Root Type for ApiVersion",
+                "description": "",
+                "required": [
+                    "createdOn",
+                    "modifiedOn",
+                    "version"
+                ],
+                "type": "object",
+                "properties": {
+                    "version": {
+                        "type": "string"
+                    },
+                    "createdOn": {
+                        "format": "date-time",
+                        "type": "string"
+                    },
+                    "modifiedOn": {
+                        "format": "date-time",
+                        "type": "string"
+                    },
+                    "labels": {
+                        "$ref": "#/components/schemas/Labels",
+                        "properties": {
+                            "label-1": {
+                                "type": "string"
+                            },
+                            "label-2": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "description": {
+                        "description": "",
+                        "type": "string"
+                    }
+                },
+                "example": {
+                    "version": "1.0",
+                    "createdOn": "2024-01-01T15:22:00Z",
+                    "modifiedOn": "2024-01-01T15:25:00Z",
+                    "labels": {
+                        "label-1": "value-1",
+                        "label-2": "value-2"
+                    }
+                }
+            },
+            "SearchedVersion": {
+                "title": "Root Type for SearchedVersion",
+                "description": "",
+                "required": [
+                    "createdOn",
+                    "modifiedOn",
+                    "version"
+                ],
+                "type": "object",
+                "properties": {
+                    "version": {
+                        "type": "string"
+                    },
+                    "createdOn": {
+                        "format": "date-time",
+                        "type": "string"
+                    },
+                    "modifiedOn": {
+                        "format": "date-time",
+                        "type": "string"
+                    }
+                },
+                "example": {
+                    "version": "1.0",
+                    "createdOn": "2024-01-01T15:22:00Z",
+                    "modifiedOn": "2024-01-01T15:25:00Z"
+                }
+            },
+            "VersionSearchResults": {
+                "description": "Describes the response received when searching for Versions.",
+                "required": [
+                    "count",
+                    "versions"
+                ],
+                "type": "object",
+                "properties": {
+                    "versions": {
+                        "description": "The Versions returned in the result set.",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/SearchedVersion"
+                        }
+                    },
+                    "count": {
+                        "description": "The total number of Versions that matched the query that produced the result set (may be \nmore than the number of Versions in the result set).",
+                        "type": "integer"
+                    }
+                }
+            },
+            "VersionSortBy": {
+                "description": "",
+                "enum": [
+                    "version",
+                    "createdOn"
+                ],
+                "type": "string"
+            },
+            "NewVersion": {
+                "title": "Root Type for NewAPI",
+                "description": "",
+                "required": [
+                    "version"
+                ],
+                "type": "object",
+                "properties": {
+                    "description": {
+                        "type": "string"
+                    },
+                    "labels": {
+                        "$ref": "#/components/schemas/Labels",
+                        "properties": {
+                            "foo": {
+                                "type": "string"
+                            },
+                            "baz": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "version": {
+                        "description": "",
+                        "type": "string"
+                    }
+                },
+                "example": {
+                    "version": "1.0.1",
+                    "description": "Another great version of my API.",
+                    "labels": {
+                        "foo": "bar",
+                        "baz": "jam"
+                    }
+                }
+            },
+            "UpdateVersion": {
+                "title": "Root Type for NewAPI",
+                "description": "",
+                "type": "object",
+                "properties": {
+                    "description": {
+                        "type": "string"
+                    },
+                    "labels": {
+                        "$ref": "#/components/schemas/Labels",
+                        "properties": {
+                            "foo": {
+                                "type": "string"
+                            },
+                            "baz": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                },
+                "example": {
+                    "description": "A great new version of my API",
+                    "labels": {
+                        "foo": "bar",
+                        "baz": "jam"
+                    }
                 }
             }
         },
